2007-12-22  Christian Persch  <chpe@gnome.org>
        
        * modules/other/gail/gail.c:
        * modules/other/gail/gailbutton.c:
        * modules/other/gail/gailcell.c:
        * modules/other/gail/gailcombo.c:
        * modules/other/gail/gailcombo.h:
        * modules/other/gail/gailcombobox.c:
        * modules/other/gail/gailentry.c:
        * modules/other/gail/gailexpander.c:
        * modules/other/gail/gailmenuitem.c:
        * modules/other/gail/gailnotebook.c:
        * modules/other/gail/gailnotebookpage.c:
        * modules/other/gail/gailnotebookpage.h:
        * modules/other/gail/gailoptionmenu.c:
        * modules/other/gail/gailrange.c:
        * modules/other/gail/gailtextview.c:
        * modules/other/gail/gailtreeview.c:
        * modules/other/gail/gailtreeview.h:
        * modules/other/gail/gailwindow.c: Use gdk_threads_add_idle.
        Bug #504571.

2007-12-22  Matthias Clasen  <mclasen@redhat.com>

	* modules/other/gail/gailclist.c: Chain up the finalizer (#504570,
	Christian Persch)

2007-12-21  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (_gdk_windowing_window_destroy):
	Plug leak of destroyed subviews, fixes bug #504753.

2007-12-20  Johan Dahlin  <johan@gnome.org>

	* tests/Makefile.am (TEST_PROGS): 
	* tests/defaultvaluetest.c: Add a test for default values,
	based on program by Christan Perch

2007-12-20  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-builder-convert (GtkBuilderConverter._remove_window): 
	Refactor to avoid some duplication.
	Convert toplevel GtkMenu's top popups and not menubars in the ui manager.
	Fixes #504749, Yuri Pimenov

2007-12-20  Kristian Rietveld  <kris@imendio.com>

	* configure.in: RYuri Pimenovemove leftovers from old XRandR check.  Makes
	the build work again on systems without xrandr 1.2.

2007-12-20  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* modules/other/gail/libgail-util/Makefile.am:
	Keep the same libtool version as the standalone	libgail-util had.